kubernetes-ingress/gateway-ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 5
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: health-check
          image: ${YOUR_IMAGE_FOR_HEALTH_CHECK}
          ports:
            - containerPort: 8080
        - name: server
          image: ${GATEWAY_IMAGE}
          ports:
            - containerPort: 50002
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - name: "grpc"
      protocol: "TCP"
      port: 9090
      targetPort: 50002
      nodePort: 30061
    - name: "health"
      protocol: "TCP"
      port: 9000
      targetPort: 8080
      nodePort: 30060
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-foo
  annotations:
    kubernetes.io/ingress.global-static-ip-name: sssss
spec:
  tls:
    - hosts:
        - server.domain.com
      secretName: fe-secret
  backend:
    serviceName: gateway
    servicePort: 9090
